--- a/personagens/morty/mortyGanhou.html
+++ b/personagens/morty/mortyGanhou.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="../../css/style.css">
     <title>Rick And Morty - Jogo</title>
 </head>
-<body class="bg-ganhou-morty">
+<body class="bg-ganhou">
 
-    <section class="section-morty-ganhou">
+    <section class="section-ganhou">
           <div class="box-gif-ganhou">
               <div class="texto-ganhou">
                   <h2>Parabéns!!!</h2>
@@ -22,7 +22,7 @@
               </figure>
 
           </div>
-          <button class="btn-ganhou-morty">Página Inicial</button>
+          <button class="btn-ganhou">Página Inicial</button>
     </section>
 </body>
 </html>
