alterando o nome de uma classe que para torna-la reutilizavel em outra página

--- a/personagens/rick/rickGameOver.html
+++ b/personagens/rick/rickGameOver.html
@@ -11,7 +11,7 @@
 <body class="bg-game-over-rick">
     <section class="perdeu">
          <div class="perdeu-texto">
-           <figure class="gif-rick">
+           <figure class="gif-medio">
                <img src="../../img/gif/rick-and-morty-face-palm.gif" alt="">
            </figure>
            
