adicionado numero da fase

--- a/personagens/beth/bethFase1.html
+++ b/personagens/beth/bethFase1.html
@@ -14,7 +14,7 @@
         <h2>Sua missão será fazer a escolhas certas para que Beth, salve seu marido que foi capturado por alguns alieniginas!</h2>
             <div class="box-pergunta">
                   <h3>Escolha uma opção</h3>
-                  <p>Beth estava trabalhando na sua clínica, operando um cavalo, quando chega em casa e seu pai e seus filhos estão
+                  <p> 1 -Beth estava trabalhando na sua clínica, operando um cavalo, quando chega em casa e seu pai e seus filhos estão
                        desesperados e preparando suas armas, Beth sem entender nada pergunta o que está acontecendo, e Morty responde 
                        que seu pai foi sequestrado por alguns alienígenas que invadiram a casa a alguns minutos e eles estão indo salva-lo.
                         O que Beth deve fazer?</p>
