corrigindo erro ortografico no titulo

--- a/personagens/beth/bethFase1.html
+++ b/personagens/beth/bethFase1.html
@@ -11,7 +11,7 @@
 <body class="bg-fase1-beth">
     
     <section class="section-pergunta">
-        <h2>Sua missão será fazer a escolhas certas para que Beth, salve seu marido que foi capturado por alguns alieniginas!</h2>
+        <h2>Sua missão será fazer a escolhas certas para que Beth, salve seu marido que foi capturado por alguns  alienígenas!</h2>
             <div class="box-pergunta">
                   <h3>Escolha uma opção</h3>
                   <p> 1 -Beth estava trabalhando na sua clínica, operando um cavalo, quando chega em casa e seu pai e seus filhos estão
