--- a/personagens/beth/bethFase3.html
+++ b/personagens/beth/bethFase3.html
@@ -11,7 +11,7 @@
 <body class="bg-fase3-beth">
     
     <section class="section-pergunta">
-        <h2>Sua missão será fazer a escolhas certas para que Beth, salve seu marido que foi capturado por alguns alieniginas!</h2>
+        <h2>Sua missão será fazer a escolhas certas para que Beth, salve seu marido que foi capturado por alguns  alienígenas!</h2>
             <div class="box-pergunta">
                   <h3>Escolha uma opção</h3>
                   <p> 3 - Beth escolhe a arma de raios ionizantes, e então sua família decide que eles vão se dividir,
