--- a/personagens/beth/bethFase2.html
+++ b/personagens/beth/bethFase2.html
@@ -11,7 +11,7 @@
 <body class="bg-fase2-beth">
     
     <section class="section-pergunta">
-        <h2>Sua missão será fazer a escolhas certas para que Beth, salve seu marido que foi capturado por alguns alieniginas!</h2>
+        <h2>Sua missão será fazer a escolhas certas para que Beth, salve seu marido que foi capturado por alguns  alienígenas!</h2>
             <div class="box-pergunta">
                   <h3>Escolha uma opção</h3>
                   <p> 2 - Beth decide que também vai procurar por seu marido, ela vai se preparar vestindo roupas apropriadas
