--- a/personagens/morty/mortyFase2.html
+++ b/personagens/morty/mortyFase2.html
@@ -14,7 +14,7 @@
         <h2>Sua missão será tomar as decisões certas para que Morty, tenha um encontro com Jéssica!</h2>
             <div class="box-pergunta">
                   <h3>Escolha uma opção</h3>
-                  <p>Eles pulam no tanque e Morty percebe que o tanque é de mentira, 
+                  <p> 2 - Eles pulam no tanque e Morty percebe que o tanque é de mentira, 
                       e que o Rick já tinha pensado nisso como um plano de fuga, porém Morty
                        achou tudo muito cliche e ficou bravo. E rick pede para o Morty soltar 
                        ossos falsos para flutuarem e convencer os alienigenas a irem embora.
