--- a/personagens/morty/mortyFase3.html
+++ b/personagens/morty/mortyFase3.html
@@ -14,7 +14,7 @@
         <h2>Sua missão será tomar as decisões certas para que Morty, tenha um encontro com Jéssica!</h2>
             <div class="box-pergunta">
                   <h3>Escolha uma opção</h3>
-                  <p>Os alienigenas ficam impressionados com o ocorrido e acabam refletindo diante a situação,
+                  <p> 3 - Os alienigenas ficam impressionados com o ocorrido e acabam refletindo diante a situação,
                       da qual passam horas conversando sobre. Enquanto Rick and Morty ficam esperando no tanque. 
                        Morty fica muito estressado pois tem um encontro com a garota que ele gosta, e toma uma atitude. 
                        O que Morty deve fazer?</p>
