--- a/personagens/rick/rickFase1.html
+++ b/personagens/rick/rickFase1.html
@@ -14,7 +14,7 @@
         <h2>Sua missão será tomar as decisões certas para que Rick, possa passar mais tempo com seu neto Morty!</h2>
             <div class="box-pergunta">
                   <h3>Escolha uma opção</h3>
-                  <p>Rick estava jogando video game com seu neto, quando de repente militares vão a sua casa avisando que
+                  <p> 1 - Rick estava jogando video game com seu neto, quando de repente militares vão a sua casa avisando que
                        o presidente dos estados unidos está pedindo a sua ajuda para eliminar um alienigena dentro de uma
                         instalação secreta do governo. O que rick deve fazer?</p>
 
