--- a/personagens/rick/rickFase2.html
+++ b/personagens/rick/rickFase2.html
@@ -14,7 +14,7 @@
         <h2>Sua missão será tomar as decisões certas para que Rick, possa passar mais tempo com seu neto Morty!</h2>
             <div class="box-pergunta">
                   <h3>Escolha uma opção</h3>
-                  <p>Rick então encontra com o presidente e resolve acabar logo com o problema, porém ele elimina o 
+                  <p> 2 - Rick então encontra com o presidente e resolve acabar logo com o problema, porém ele elimina o 
                       alienígena com extrema facilidade. E como recompensa pede para o presidente dar um autógrafo
                        para seu neto, entretanto o presidente recusa. O que Rick deve fazer? </p>
 
