--- a/personagens/rick/rickFase3.html
+++ b/personagens/rick/rickFase3.html
@@ -14,7 +14,7 @@
         <h2>Sua missão será tomar as decisões certas para que Rick, possa passar mais tempo com seu neto Morty!</h2>
             <div class="box-pergunta">
                   <h3>Escolha uma opção</h3>
-                  <p> A briga fica descontrolada, e seu neto fica estressado e vai embora. Rick ve seu neto ir embora e 
+                  <p> 3 - A briga fica descontrolada, e seu neto fica estressado e vai embora. Rick ve seu neto ir embora e 
                       para com a briga, pois não vale mais a pena. O presidente exige que o Rick pessa desculpas, e diz
                        que se ele não se desculpar irá tirar todos os seus direitos como cidadão americano. 
                        O que Rick deve fazer?</p>
