adicionando função no  onclick

--- a/personagens/morty/mortyFase3.html
+++ b/personagens/morty/mortyFase3.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="../../img/portal-1.jpg">
     <link rel="stylesheet" href="../../css/fases.css">
-    <title>Document</title>
+    <title>Rick and Morty - Jogo</title>
 </head>
 <body class="bg-fase3-morty">
     
@@ -25,9 +25,11 @@
                        <li>Sair do tanque e fingir ser um zombie</li>
                    </ul>
 
-                   <button class="btn-resposta">Responder</button>
+                   <button class="btn-resposta" onclick="proximaFase3()">Responder</button>
             </div>
     </section>
+
+    <script src="./js/mortyProximaFase.js"></script>
 
 </body>
 </html>
