adicionando função onclick  no botão do personagem

--- a/personagens.html
+++ b/personagens.html
@@ -22,20 +22,21 @@
 
         <div class="personagem ">
           <img class="borda-morty" src="img/118785.gif" alt="">
-          <button class="btn-personagem btn-morty">Morty</button>
+          <button class="btn-personagem btn-morty" onclick="morty()">Morty</button>
         </div>
 
         <div class="personagem">
             <img class="borda-rick" src="img/rick-fortnite.gif" alt="">
-            <button class="btn-personagem btn-rick">Rick</button>
+            <button class="btn-personagem btn-rick" onclick="rick()">Rick</button>
         </div>
 
         <div class="personagem">
-          <img class="borda-beth" src="img/rick-and-morty-scream.gif" alt="">
-          <button class="btn-personagem btn-beth">Beth</button>
+          <img class="borda-beth" src="img/beth.gif" alt="">
+          <button class="btn-personagem btn-beth" onclick="beth() ">Beth</button>
         </div>
    </div>
   </section>
     
+  <script src="js/escolhaPersonagem.js"></script>
 </body>
 </html>
