adicionando função no onclick do botão

--- a/personagens/rick/rickFase1.html
+++ b/personagens/rick/rickFase1.html
@@ -24,9 +24,10 @@
                        <li>Xingar os militares por atrapalharem sua jogatina com seu neto</li>
                    </ul>
 
-                   <button class="btn-resposta">Responder</button>
+                   <button class="btn-resposta" onclick=" fase1Rick()">Responder</button>
             </div>
     </section>
 
+    <script src="js/fasesRick.js"></script>
 </body>
 </html>
