--- a/personagens/rick/rickFase2.html
+++ b/personagens/rick/rickFase2.html
@@ -24,9 +24,11 @@
                        <li>Vai embora e diz nunca mais ajudar os Estados Unidos </li>
                    </ul>
 
-                   <button class="btn-resposta">Responder</button>
+                   <button class="btn-resposta" onclick="fase2Rick()">Responder</button>
             </div>
     </section>
 
+    <script src="js/fasesRick.js"></script>
+    
 </body>
 </html>
