--- a/personagens/rick/rickFase3.html
+++ b/personagens/rick/rickFase3.html
@@ -25,9 +25,11 @@
                        <li>Rick abre um portal e traz diversos alienígenas da qual ele acabou de eliminar para a casa branca</li>
                    </ul>
 
-                   <button class="btn-resposta">Responder</button>
+                   <button class="btn-resposta" onclick="fase3Rick() ">Responder</button>
             </div>
     </section>
+
+    <script src="js/fasesRick.js"></script>
 
 </body>
 </html>
