--- a/personagens/rick/rickGameOver.html
+++ b/personagens/rick/rickGameOver.html
@@ -17,7 +17,7 @@
            
            <div class="box-game-over">
                <h2>Game Over</h2>
-               <p class="texto-rick">Morty não conseguiu passar mais tempo com seu neto Morty.</p>
+               <p class="texto-rick">Rick não conseguiu passar mais tempo com seu neto Morty.</p>
 
                <button class="btn-game-over">Jogar novamente</button>
            </div>
