adicionado função onclick no botão

--- a/personagens/beth/bethFase1.html
+++ b/personagens/beth/bethFase1.html
@@ -25,9 +25,11 @@
                        <li>Ir se preparar e procurar uma arma para ir salvar seu marido</li>
                    </ul>
 
-                   <button class="btn-resposta">Responder</button>
+                   <button class="btn-resposta" onclick=" fase1Beth()">Responder</button>
             </div>
     </section>
 
+    <script src="js/fasesBeth.js"></script>
+    
 </body>
 </html>
