--- a/personagens/beth/bethFase2.html
+++ b/personagens/beth/bethFase2.html
@@ -24,9 +24,11 @@
                        <li>Armas de raios ionizantes</li>
                    </ul>
 
-                   <button class="btn-resposta">Responder</button>
+                   <button class="btn-resposta" onclick="fase2Beth()">Responder</button>
             </div>
     </section>
+
+    <script src="js/fasesBeth.js"></script>
 
 </body>
 </html>
