--- a/personagens/beth/bethFase3.html
+++ b/personagens/beth/bethFase3.html
@@ -18,14 +18,16 @@
                     para terem chance de encontrar Jeff mais rápido e resgata-lo.Qual portal Beth deve escolher?  </p>
 
                    <ul class="alternativas">
-                       <li>Portal 1</li>
-                       <li>Portal 2</li>
-                       <li>Portal 3</li>
+                       <li>Beth escolhe o portal 1 ?</li>
+                       <li>Beth escolhe o portal 2 ?</li>
+                       <li>Beth escolhe o portal 3 ?</li>
                    </ul>
 
-                   <button class="btn-resposta">Responder</button>
+                   <button class="btn-resposta" onclick="fase3Beth()">Responder</button>
             </div>
     </section>
+
+    <script src="js/fasesBeth.js"></script>
 
 </body>
 </html>
