adicionando função para voltar a página inicial

--- a/personagens/beth/bethGanhou.html
+++ b/personagens/beth/bethGanhou.html
@@ -23,7 +23,9 @@
               </figure>
 
           </div>
-          <button class="btn-ganhou">Página Inicial</button>
+          <button class="btn-ganhou" onclick="paginaIncial()">Página Inicial</button>
     </section>
+
+    <script src="../../js/funcoesReutilizaveis.js"></script>
 </body>
 </html>
