--- a/personagens/morty/mortyGameOver.html
+++ b/personagens/morty/mortyGameOver.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-Br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -18,10 +18,12 @@
                <h2>Game Over</h2>
                <p>Infelizmente suas escolhas, fizeram Morty perder o encontro com Jéssica.</p>
 
-               <button class="btn-game-over">Jogar novamente</button>
+               <button class="btn-game-over" onclick="jogarNovamente()">Jogar novamente</button>
            </div>
 
          </div>
     </section>
+
+    <script src="../../js/funcoesReutilizaveis.js"></script>
 </body>
 </html>
