--- a/personagens/rick/rickGameOver.html
+++ b/personagens/rick/rickGameOver.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-Br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -19,10 +19,12 @@
                <h2>Game Over</h2>
                <p class="texto-rick">Rick não conseguiu passar mais tempo com seu neto Morty.</p>
 
-               <button class="btn-game-over">Jogar novamente</button>
+               <button class="btn-game-over" onclick="jogarNovamente()">Jogar novamente</button>
            </div>
 
          </div>
     </section>
+
+    <script src="../../js/funcoesReutilizaveis.js"></script>
 </body>
 </html>
