--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="../img/portal-1.jpg">
+    <link rel="icon" href="img/portal-1.jpg">
     <link rel="stylesheet" href="css/style.css">
     <title>Rick And Morty - Jogo </title>
 </head>
